# hpc_library_build_notes

./: .gitignore
deploy-web-app/: enable_swap.sh  note-deploy.sh  note.sh  remote-develop.sh  restart_server  run_web_app_vscode.sh  update.sh
gnu-global-tool/: install.sh
job-hunt/: dice.cpp  dice.h  input1.txt  input2.txt  scratch.sh  test_dice  test_dice.cpp
job-hunt/dena/: restaurant.java  restaurant2.java
job-hunt/mf/: 1.cpp
laTex/: scratch.sh
laTex/template/: main.aux  main.tex  sample.bib  settings.json
leetcode/: App.java  cpp.cpp
leetcode/cpp_note/: .clangd  CMakeLists.txt  CMakePresets.json  cpp.cpp  data_structure.txt
leetcode/temp/: A.java  ConstructionTest.java
nvhpc_sdk/: build_perftest.sh  how_to_configure_clangd_with_cuda.sh  job_test.sh  scratch.sh
nvhpc_sdk/build_nvshmem/: .clangd  nvshmem.code-workspace  scratch.sh
nvhpc_sdk/test_nvhpc_24.11/: job.sh  mpi-based-init  nanri_note.sh
nvshmem/nvshmem-itself/: 1  build.sh  (+2 more)
nvshmem/test-program/: CMakeLists.txt  CMakePresets.json  helloWorldJob.sh  scratch.sh
nvshmem/test-program/mpi-simple-shift/: arribute-based-ini.sh  compile.sh  run.sh  unique-id-Attribute-Based-Ini.sh  unique-id-Attribute-Based-Initialization-Example.cu
nvshmem/test-program/mpi-simple-shift/blast/: Attribute-Based-Initialization-Example.cu  arribute-based-ini.sh  slurm-7074.out1  slurm-7081.out1
openucc/: CMakePresets.json  k-nomial_note.md
osu-microbenchmarks/: install.sh  install2.sh  install3.sh  install_openshmem.sh
ssh-etc/: command.txt  macOS_disk.sh  macos-command.txt  when-git-couldn't-push
(+70 files in other folders)
